# project1

./: pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
